force-app/main/default/objects/Test_Run__c/Test_Run__c.object-meta.xml
<CustomObject>
    <label>Test Run</label>
    <nameField>
        <displayFormat>TR-{00000000}</displayFormat>
        <label>Test Run Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>