force-app/main/default/objects/Test_Run__c/fields/Blocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Date__c</fullName>
    <label>Blocked Date</label>
    <type>DateTime</type>
</CustomField>