force-app/main/default/objects/Test_Run__c/fields/Captured_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Captured_Metrics__c</fullName>
    <label>Captured Metrics</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>