force-app/main/default/objects/Test_Run__c/fields/Change_Request_Txt__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Txt__c</fullName>
    <label>Change Request Txt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>