force-app/main/default/objects/Test_Run__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <formula>TEXT(Test_Case__r.Function_PL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Function</label>
    <type>Text</type>
</CustomField>