force-app/main/default/objects/Test_Run__c/fields/Mobile_Device_Version__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Device_Version__c</fullName>
    <label>Mobile Device Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>