force-app/main/default/objects/Test_Run__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Run Parameters</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>