force-app/main/default/objects/Test_Run__c/fields/Product_Patch__c.field-meta.xml
<CustomField>
    <fullName>Product_Patch__c</fullName>
    <label>Build Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>