force-app/main/default/objects/Test_Run__c/fields/Product_Version_PL__c.field-meta.xml
<CustomField>
    <fullName>Product_Version_PL__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex-1.0</fullName>
            </value>
            <value>
                <fullName>Apex-1.1</fullName>
            </value>
            <value>
                <fullName>Apex-1.2</fullName>
            </value>
            <value>
                <fullName>Apex-Future</fullName>
            </value>
            <value>
                <fullName>CAIR-5.0</fullName>
            </value>
            <value>
                <fullName>CAIR-5.1</fullName>
            </value>
            <value>
                <fullName>CAIR-5.2</fullName>
            </value>
            <value>
                <fullName>CAIR-6.0</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>RA-2.0</fullName>
            </value>
            <value>
                <fullName>RA-2.1</fullName>
            </value>
            <value>
                <fullName>RA-2.2</fullName>
            </value>
            <value>
                <fullName>RA-2.3</fullName>
            </value>
            <value>
                <fullName>RA-2.4</fullName>
            </value>
            <value>
                <fullName>RA-2.5</fullName>
            </value>
            <value>
                <fullName>RA-2.6</fullName>
            </value>
            <value>
                <fullName>RA-2.7</fullName>
            </value>
            <value>
                <fullName>RA-2.8</fullName>
            </value>
            <value>
                <fullName>RA-2.9</fullName>
            </value>
            <value>
                <fullName>RA-3.0</fullName>
            </value>
            <value>
                <fullName>RA-3.1</fullName>
            </value>
            <value>
                <fullName>RA-3.2</fullName>
            </value>
            <value>
                <fullName>RA-3.3</fullName>
            </value>
            <value>
                <fullName>RA-DEV</fullName>
            </value>
            <value>
                <fullName>RMC-1.0</fullName>
            </value>
            <value>
                <fullName>RMC-1.1</fullName>
            </value>
            <value>
                <fullName>RMC-2.0</fullName>
            </value>
            <value>
                <fullName>RMC-2.1</fullName>
            </value>
            <value>
                <fullName>RNT-5.5</fullName>
            </value>
            <value>
                <fullName>RTS-3.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>