force-app/main/default/objects/Test_Run__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
                <color>#33FF33</color>
                <label>Pass</label>
            </value>
            <value>
                <fullName>Fail</fullName>
                <color>#FF0000</color>
                <label>Fail</label>
            </value>
            <value>
                <fullName>Not yet run</fullName>
                <color>#FFFF66</color>
                <default>true</default>
                <label>Not yet run</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#CC33CC</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Expected fail</fullName>
                <color>#FF9900</color>
                <label>Expected fail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>