force-app/main/default/objects/Test_Run__c/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <description>Date that a test run&apos;s status was changed. Used for tester home scorecard.</description>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>