force-app/main/default/objects/Test_Run__c/fields/Subfunction__c.field-meta.xml
<CustomField>
    <fullName>Subfunction__c</fullName>
    <formula>TEXT(Test_Case__r.Subfunction_PL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subfunction</label>
    <type>Text</type>
</CustomField>