force-app/main/default/objects/Test_Run__c/fields/Test_Environment__c.field-meta.xml
<CustomField>
    <fullName>Test_Environment__c</fullName>
    <label>Test Environment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>