force-app/main/default/objects/Test_Run__c/fields/Test_Objective__c.field-meta.xml
<CustomField>
    <fullName>Test_Objective__c</fullName>
    <formula>Test_Case__r.Test_Objective__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Objective</label>
    <type>Text</type>
</CustomField>