force-app/main/default/objects/Test_Run__c/fields/Useless__c.field-meta.xml
<CustomField>
    <fullName>Useless__c</fullName>
    <label>Useless</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>