force-app/main/default/objects/Test_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Case__c</columns>
    <columns>Result__c</columns>
    <columns>Notes__c</columns>
    <columns>Product_Patch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>